# ai_local

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RUN_PYWIN32_SMOKE_TEST.ps1  SUPPORT.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: FUNDING.yml
.tmp-index-demo/: windows-service-guide.md
.tmp-pywin32-smoke/: pywin32-service-smoke-test.ps1
ai_local/: __init__.py  cli.py  doctor.py
ai_local.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
configs/: agent_loop_gates.yaml  benchmark_models.yaml  benchmark_ollama.yaml  benchmark_ollama_prompt.yaml  benchmark_regression.yaml  benchmark_release_gate.yaml  benchmark_thresholds.yaml  big_harness.yaml  composite_gates.yaml  confirmation_gates.yaml  conflict_path_gates.yaml  decision_gates.yaml  developer_sprints.yaml  evaluation_gates.yaml  evidence_rank_gates.yaml  flow_memory_rating_gates.yaml  gates.yaml  global_developer_harness.yaml  knowledge_gates.yaml  memory_governance_gates.yaml  memory_layer_gates.yaml  memory_regression_gates.yaml  memory_sql_gates.yaml  multi_instance_conflict_gates.yaml  noise_gates.yaml  operational_safety_gates.yaml  patch_levels.yaml  patch_pipeline_harness.yaml  phase9_replay_fixtures.yaml  phase9_stress_gates.yaml  phase_fast_gates.yaml  prompt_injection_refusal_gates.yaml  request_lifecycle_gates.yaml  retrieval_gates.yaml  skill_gates.yaml  skills.yaml  small_patch_harness.yaml  thread_control_gates.yaml  tool_combo_gates.yaml  tools.yaml  (+1 more)
docs/: agent-loop-harness.md  architecture.md  benchmark-release-gate.md  benchmark.md  (+110 more)
(+445 files in other folders)
